--- a/app/assets/stylesheets/custom.scc.scss
+++ b/app/assets/stylesheets/custom.scc.scss
@@ -44,3 +44,12 @@ footer ul li{
     float: left;
     margin-left: 15px;
 }
+
+.articles-actions{
+    border-top: 1px solid #eaeaea;
+    padding-top: 5px;
+}
+
+.description {
+    margin-top: 0px;
+}
